syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.utm.common.rcp.publisher";
package com.utm.common;

message PublishRequest {
  int32 id = 1;
  string topic = 2;
  string message = 3;
}

message PublishResponse {
bool isSuccess = 1;
}

service Publisher {
  rpc publishMessage(PublishRequest) returns (PublishResponse);
}